# smart-recommendation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/services/: embedding_service.py  product.py  recommendation_service.py  vector_store.py
streamlit_app/: app.py
tests/: test_api.py
